<resources>
    <string name="app_name">IHOUSE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_habitaciones">Habitaciones</string>
    <string name="menu_usuarios">Miembros</string>
    <string name="menu_opciones">Opciones</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="url">Url</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="ihouse">IHOUSE</string>
    <string name="logout">Logout</string>
    <string name="lugar_habitacion">Lugar Habitacion</string>
    <string name="nombre_habitacion">Nombre Habitacion</string>
    <string name="crear">Crear</string>
    <string name="nombre_componente">Nombre Componente</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="a_adir">Añadir</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="admin">ADMIN</string>
    <string name="email">Email</string>
    <string name="powered_by">Powered By</string>
    <string name="elplaton">ELPLATON</string>
</resources>