<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.thefactory.ihouse.ui.habitaciones.HabitacionesFragment"
        android:label="@string/menu_habitaciones"
        tools:layout="@layout/fragment_habitaciones" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.thefactory.ihouse.ui.usuarios.MiembrosFragment"
        android:label="@string/menu_usuarios"
        tools:layout="@layout/fragment_usuarios" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.thefactory.ihouse.ui.opciones.OpcionesFragment"
        android:label="@string/menu_opciones"
        tools:layout="@layout/fragment_opciones" />
</navigation>