<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".ui.opciones.OpcionesFragment">

    <TextView
        android:id="@+id/text_Opciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menuFlotanteOpcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="44dp"
        android:focusable="true"
        app:fab_addButtonColorNormal="@color/turquesa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        tools:clickable="true">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botonMenuAddOpcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/a_adir"
            app:srcCompat="@drawable/ic_mas"
            app:backgroundTint="#009688"
            app:fabSize="mini" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botonMenuUpdateOpcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/actualizar"
            app:srcCompat="@drawable/ic_update"
            app:backgroundTint="#009688"
            app:fabSize="mini"
            tools:fab_colorNormal="@color/turquesa_oscuro" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botonMenuDeleteOpcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/eliminar"
            app:srcCompat="@drawable/ic_delete"
            app:backgroundTint="#009688"
            app:fabSize="mini"
            app:fab_colorNormal="@color/turquesa_oscuro" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</androidx.constraintlayout.widget.ConstraintLayout>