<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".ui.habitaciones.HabitacionesFragment">

    <RelativeLayout
        android:id="@+id/layout_progress_bar_habitaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_white"
        android:elevation="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBarHabitaciones"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="339dp" />
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/expandableListViewHabitaciones"
        android:layout_width="354dp"
        android:layout_height="694dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:choiceMode="multipleChoiceModal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menuFlotanteHabitaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:focusable="true"
        app:fab_addButtonColorNormal="@color/turquesa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886"
        tools:clickable="true">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botonMenuAddHabitacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/a_adir"
            app:backgroundTint="#009688"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_mas" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botonMenuUpdateHabitacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/actualizar"
            app:backgroundTint="#009688"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_update"
            tools:fab_colorNormal="@color/turquesa_oscuro" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botonMenuDeleteHabitacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/eliminar"
            app:backgroundTint="#009688"
            app:fabSize="mini"
            app:fab_colorNormal="@color/turquesa_oscuro"
            app:srcCompat="@drawable/ic_delete" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</androidx.constraintlayout.widget.ConstraintLayout>