<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:rotationX="0"
    android:screenOrientation="portrait"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:background="@drawable/bg_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nombreUsuarioLogin"
        android:layout_width="248dp"
        android:layout_height="41dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/bg_white_stroke_black"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/usuario"
        android:lineSpacingExtra="14sp"
        android:phoneNumber="false"
        android:rotation="0"
        android:rotationY="0"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/psswdUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.996" />

    <EditText
        android:id="@+id/psswdUsuario"
        android:layout_width="248dp"
        android:layout_height="41dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/bg_white_stroke_black"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:lineSpacingExtra="14sp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/url"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="248dp"
        android:layout_height="41dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="56dp"
        android:autoText="false"
        android:background="@drawable/bg_white_stroke_black"
        android:cursorVisible="false"
        android:ems="10"
        android:gravity="center"
        android:hint="       Url"
        android:lineSpacingExtra="14sp"
        android:paddingLeft="20dp"
        android:paddingRight="60dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/botonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/button_blue"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="126dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/logo_ihouse" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        app:layout_constraintEnd_toEndOf="@+id/nombreUsuarioLogin"
        app:layout_constraintTop_toTopOf="@+id/nombreUsuarioLogin"
        app:srcCompat="@drawable/usuario" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="18dp"
        android:layout_height="17dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        app:layout_constraintEnd_toEndOf="@+id/url"
        app:layout_constraintTop_toBottomOf="@+id/psswdUsuario"
        app:srcCompat="@drawable/url" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="17dp"
        android:layout_height="19dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        app:layout_constraintEnd_toEndOf="@+id/psswdUsuario"
        app:layout_constraintTop_toBottomOf="@+id/nombreUsuarioLogin"
        app:srcCompat="@drawable/padlock" />

    <RelativeLayout
        android:id="@+id/layout_progress_bar_miembros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_white"
        android:elevation="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBarMiembros"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="339dp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>